# vdl

./: .gitignore  .gitmodules  .goreleaser.yaml  .prettierignore  .prettierrc  AGENTS.md  README.md  Taskfile.yml  biome.json  dprint.json  install.sh  package-lock.json  package.json  vdl.config.vdl  vdl.yaml  zensical.toml  zensical_lexer.py
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
.github/workflows/: ci.yaml  docker-builder-publish.yaml  docker-dev-publish.yaml  docs.yaml  release-build-and-upload.yaml  release.yaml  sync-docker-hub-readme.yaml
docker/: Dockerfile  Dockerfile.builder
docs/: about.md  astro.config.mjs  creating-plugins.md  installation.md  package-lock.json  package.json  plugins.md  request-lifecycle.md  urpc-formatting-guide.md  urpc-spec.md  zola.toml
docs/content/: _index.md  about.md  index.md
docs/guides/: cli.md  configuration.md  creating-plugins.md  editors.md  installation.md
docs/language/: docstrings.md  includes.md  index.md  naming-validation.md  types.md
e2e/: README.md  e2e_test.go  go.mod  plugin.js  vdl.config.vdl
integrations/pygments/: README.md  pyproject.toml
integrations/pygments/vdl_lexer/: __init__.py  lexer.py
playground/: README.md  go.mod  package-lock.json  package.json  postbuild.ts  svelte.config.js  vite.config.ts
schemas/: config.vdl  config_file.vdl  ir.vdl  lock_file.vdl  plugin.vdl  pluginInput.vdl  plugin_input.vdl  plugin_output.vdl  wasm.vdl
scripts/: go.mod  set-version.ts
toolchain/: .gitignore  .golangci.yaml  .prettierignore  Taskfile.yml  go.mod  go.sum
urpc/: go.mod
(+1518 files in other folders)
